# distinfo

./: .env  .envrc  .gitignore  .gitmodules  .nixipy.yaml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .yamllint  Makefile  README.md  TODO  covcfg-acceptance.toml  covcfg-atest.toml  covcfg-ftest.toml  covcfg-packages.toml  covcfg-ptest.toml  covcfg-utest.toml  covcfg.py  default.nix  pyproject.toml  setup.py  shell.nix
.github/: dependabot.yml
.github/workflows/: check.yml  python-package.yml  test-report.yml
distinfo/: __init__.py  __main__.py  base.py  cli.py  command.py  const.py  distribution.py  logconfig.py  logconfig.yaml  marker.py  monkey.py  requirement.py  requires.py  util.py
distinfo/collector/: __init__.py  cargo.py  collector.py  distcollector.py  findpackages.py  findpkgs.py  findtests.py
distinfo/collector/metadata/: __init__.py  metadatacollector.py  pathmetadata.py  pyprojectmetadata.py
distinfo/collector/metadata/dirty/: __init__.py  dirtycollector.py  pyprojectdynamicmetadata.py  setuptoolsmetadata.py
distinfo/collectors/: collector.py  egginfo.py
distinfo/test/: cases.py  conftest.py  whitelist.py
distinfo/test/functional/: test_cli.py
distinfo/test/unit/: test_base.py  test_distribution.py  test_requirement.py  test_util.py
distinfo/test/unit/collector/: cases.py  test_collector.py  test_dirty.py  test_distinfo.py  test_egginfo.py  test_findtests.py  test_nose.py  test_pep518.py  test_pipfile.py  test_pipreqs.py  test_pytest.py  test_requirementsfile.py  test_toxini.py
tests/: cases.py  conftest.py  whitelist.py
tests/acceptance/: test_cli.py  test_packages.py  test_packages.yaml
tests/functional/: cases.py  test_cargo.py  test_cli.py  test_findpackages.py  test_findpkgs.py  test_findtests.py  test_pathmetadata.py  test_pyprojectmetadata.py
tests/functional/dirty/: cases.py  test_pyprojectdynamicmetadata.py  test_setuptoolsmetadata.py
tests/unit/: conftest.py  test_base.py  test_distribution.py  test_requirement.py  test_util.py
tests/unit/collector/: cases.py  test_collector.py  test_dirty.py  test_findtests.py  test_pipreqs.py  test_toxini.py
